--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     min-height: 100%;
     position: relative;
 }
-a:link {
+a {
     text-decoration: none;
     color:black;
     font-family: 'Open Sans', sans-serif;
@@ -40,18 +40,18 @@ header {
     background-image:url(../images/logo/barre-logo.png);
     opacity: 1;
     background-position: center; /* Centre l'image */
-    background-size:cover; /* prend toute la place possible */
+    background-size:cover;/* prend toute la place possible */
+    z-index: 1;/*pour que tous les éléments passe dessous*/
 }
-/*fais un fond dégradé sur le bandeau du header*/
-#degrad {
-    background-image: linear-gradient(to right,rgba(255,255,255,0.1),white 40%, 90% /*taille du blanc*/,rgba(255,255,255,0.1));
-}
+
 /*bandeau au dessus de la barre de nav*/
 #haut {
-    display: flex;
+display: flex;
     justify-content: center;
     align-self: center;
     width: 100%;
+/*fais un fond dégradé sur le bandeau du header*/
+    background-image: linear-gradient(to right,rgba(255,255,255,0.1),white 40%, 90% /*taille du blanc*/,rgba(255,255,255,0.1));
 }
 /*logo*/
 #logo {
@@ -91,8 +91,22 @@ header {
     display: flex;
     justify-content: space-around;
     background-color: rgb(195,172,118);
+    align-items: center;
+}
+
+#navPrimaire > a {
+    height: 100%;
+}
+
+.onglet {
     padding: 10px;
-    /*séléctionnée : rgb(216,182,102);*/
+}
+
+.onglet:hover {
+    background-color: rgb(175,152,98);
+}
+.onglet > a:hover {
+    color: white;
 }
 
 .navSecondaire {
@@ -123,12 +137,20 @@ header {
     justify-content: center;
     align-items: center;
 }
+
+.b:hover {
+    color: white;
+    background-color: rgb(175,152,98);
+}
+
 /*texte des "boutons"*/
 #entree, #plat, #dessert {
     display: flex;
     align-items: flex-start;
     margin-left: 200px;
 }
+
+
 
 /******************************************|
 |                  BODY                    |   
@@ -184,6 +206,14 @@ img {
     margin: 15px;
     width: 40%;
 }
+button{
+    background: #efd242;
+    border:none;
+    box-shadow: 1px 1px 10px grey;
+    height: 20px;
+    margin: 20px;
+    color: black;
+}
 
 /*---------------------*/
 /*--    Activités    --*/
@@ -200,7 +230,7 @@ li, ul {
 }
 
 /*---------------------*/
-/*--   Contact       --*/
+/*--     Contact     --*/
 /*---------------------*/
 /*couleur du body differente des autres pages*/
 .body-uni{
@@ -231,6 +261,7 @@ li, ul {
 .contact h1{
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 25px;
 }
 /* organisation des coordonnées mail*/
 #img-mail{
@@ -255,6 +286,26 @@ li, ul {
     align-self: center;
     width: 80%;
 }
+
+/* pour le tableau du back-office */
+
+table {
+    border-collapse : collapse;
+    display: flex;
+    flex-direction: column;
+}
+
+td, th {
+    border: 1px solid black;
+    padding: 2px;
+    text-align: center;
+    width: 200px;
+}
+
+.precisions {
+    width: 300px;
+}
+
 
 
 /******************************************|
@@ -287,6 +338,7 @@ li, ul {
     width:200px;
     height: 130px;
     margin-bottom: 10px;
+    resize: none;
 }
 /*positionnement du bouton réserver*/
 #btn-reserv{
@@ -296,8 +348,8 @@ li, ul {
     height: 20px;
     width: 50%;
     position: absolute;
-    top: 97%;
-    right: 25%;
+    top: 93%;
+    right: 20%;
     
 }
 /******************************************|
@@ -314,14 +366,16 @@ li, ul {
 /*mise en forme partie organigramme */
 .org{
     display: flex;
+    justify-content: center;
+    align-content: center;
     width: 50%;
-    height: 70%;
     background-color: #e4c454;
     border-radius: 10px;
     box-shadow: -3px -2px 10px grey;
 }
 #organi{
-    width: 80%;
+    display: flex;
+    width: 90%;
 }
 /******************************************|
 |             notreEquipeCandidat          |   
@@ -337,6 +391,7 @@ li, ul {
     border-radius: 10px;
     box-shadow: -3px -2px 10px grey;
     width: 30%;
+    height: 80%;
     margin-top: 20px;
     position: relative; /*pour positionner le bouton*/
     
@@ -363,6 +418,7 @@ li, ul {
     flex-direction: column;
     width: 80%;
     align-content: center;
+    margin-top: 20px;
 }
 .candidat input{
     margin-top: 3%;
@@ -376,14 +432,15 @@ li, ul {
 #motivations{
     margin-top: 3%;
     margin-bottom: 3%;
-    height: 170px;
+    height: 150px;
+    resize: none;
 }
 
-/*mise en forme et postion du bouton */
+/*mise en forme et position du bouton */
 #btnPostule{
     position: absolute;
-    top: 97%;
-    right: 25%;
+    top: 93%;
+    right: 20%;
     width: 50%;
     background: #efd242;
     border:none;
@@ -404,16 +461,18 @@ li, ul {
     border-radius: 10px;
     box-shadow: -3px -2px 10px grey;
     width: 30%;
-    height: 60%;
+    height: 80%;
     margin-top: 20px;
     position: relative; /*pour positionner le bouton*/
     
 }
 /*mise en forme des liens pour les formulaires*/
 .collab div{
-    margin-top: 3%;
+     margin-top: 3%;
     text-align: center;
     height: 5%;
+    font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
 }
 .collab a{
     text-decoration: none;
@@ -423,6 +482,8 @@ li, ul {
     width: 50%;
     text-decoration: underline;
     font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    cursor: pointer;
 }
 /*mise en forme du formulaire*/
 .collab form{
@@ -437,18 +498,99 @@ li, ul {
 }
 .collab textarea{
     margin-top: 10%;
-    margin-bottom: 3%;
-    height: 40%;
+    margin-bottom: 10%;
+    height: 200px;
+    resize: none;
 }
 #btnCollab{
     position: absolute;
-    top: 97%;
-    right: 25%;
+    top: 93%;
+    right: 20%;
     width: 50%;
     background: #efd242;
     border:none;
     box-shadow: 3px 2px 10px grey;
     height: 20px;
+    
+}
+/******************************************|
+|                 GALERIE                  |   
+|******************************************/
+/*organisation des images*/
+.gal{
+    display:flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    flex-direction: row;
+}
+/*gestion de la taille des images*/
+.gal img{
+    width: 200px;
+    height: 150px;
+}
+/*placement de la barre de filtre*/
+.filtre {
+    display: flex;
+    flex-direction: row;
+    align-self: flex-start;
+    margin-left: 100px;
+}
+
+/******************************************|
+|          bouton back to top              |   
+|******************************************/
+
+#backToTop {
+  display: none; /* caché par défaut */
+  position: fixed; /* position fixe */
+  bottom: 20px; 
+  right: 30px; 
+  border: none; 
+  outline: none; 
+  cursor: pointer; /* le pointer change */
+  width: 30px;
+  height: 30px;
+}
+
+/******************************************|
+|                   carrousel              |   
+|******************************************/
+.carrousel{
+    display: flex;
+    width: 500px;
+    height: 300px;
+}
+.slick-prev, 
+.slick-next{
+    box-shadow: none;
+}
+
+/******************************************|
+|                 login                    |   
+|******************************************/
+.log {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-content: flex-start;
+    background-color: #efd242;
+    border-radius: 10px;
+    box-shadow: -3px -2px 10px grey;
+    width: 400px;
+    height: 100px;
+   
+    
+}
+.log form{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    align-content: center;
+    margin-top: 10px;
+}
+.log input{
+    margin-top: 3%;
 }
 
 
